// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<json-form> demo: > render [a2ui] correctly 1`] = `
<form data-v-df6ca232="" class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--a2ui-0.8">
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->预约人
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="_booking_name">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入预约人" value=""><!----><!----></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->启用高级配置
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="_booking_advanced">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><label class="sd-checkbox sd-json-form-control--inline"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">启用高级配置</span></label></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->预约时间
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="_booking_time">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex">
          <div class="sd-picker sd-picker-size-medium sd-picker-disabled sd-json-form-control" enabledate="true" enabletime="true" visible="false">
            <!--v-if-->
            <div class="sd-picker-input"><input disabled="" placeholder="请选择预约时间" class="sd-picker-start-time"></div>
            <div class="sd-picker-suffix">
              <!--v-if--><span class="sd-picker-suffix-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-calendar" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M7 22h34M14 5v8m20-8v8M8 41h32a1 1 0 0 0 1-1V10a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v30a1 1 0 0 0 1 1Z"></path></svg></span>
              <!--v-if-->
            </div>
          </div>
          <!---->
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</form>
<div data-v-df6ca232="" class="sd-space sd-space-horizontal sd-space-align-center sd-space-wrap" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><span data-v-df6ca232="" class="sd-tag sd-tag-size-medium sd-tag-ellipsis sd-tag-blue sd-tag-checked"><!--v-if--><span class="sd-tag-text sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">未填写姓名</span></span>
    <!---->
    <!--v-if-->
    <!--v-if--></span>
  </div>
  <!---->
  <div class="sd-space-item"><span data-v-df6ca232="" class="sd-tag sd-tag-size-medium sd-tag-ellipsis sd-tag-green sd-tag-checked"><!--v-if--><span class="sd-tag-text sd-ellipsis sd-ellipsis--single-line" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;"><span class="sd-ellipsis-content">未选择时间</span></span>
    <!---->
    <!--v-if-->
    <!--v-if--></span>
  </div>
</div>
`;

exports[`<json-form> demo: > render [basic] correctly 1`] = `
<form data-v-d64c8b2e="" class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--default">
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label"><strong class="sd-form-item-label-required-symbol"><svg fill="currentColor" viewBox="0 0 1024 1024" width="1em" height="1em"><path d="M583.338667 17.066667c18.773333 0 34.133333 15.36 34.133333 34.133333v349.013333l313.344-101.888a34.133333 34.133333 0 0 1 43.008 22.016l42.154667 129.706667a34.133333 34.133333 0 0 1-21.845334 43.178667l-315.733333 102.4 208.896 287.744a34.133333 34.133333 0 0 1-7.509333 47.786666l-110.421334 80.213334a34.133333 34.133333 0 0 1-47.786666-7.509334L505.685333 706.218667 288.426667 1005.226667a34.133333 34.133333 0 0 1-47.786667 7.509333l-110.421333-80.213333a34.133333 34.133333 0 0 1-7.509334-47.786667l214.186667-295.253333L29.013333 489.813333a34.133333 34.133333 0 0 1-22.016-43.008l42.154667-129.877333a34.133333 34.133333 0 0 1 43.008-22.016l320.512 104.106667L412.672 51.2c0-18.773333 15.36-34.133333 34.133333-34.133333h136.533334z"></path></svg></strong>姓名
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="name">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-json-form-control"><!----><input class="sd-input sd-input-size-medium" type="text" placeholder="请输入姓名" value=""><!----><!----></span></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->城市
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="city">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input sd-select-view-input-hidden" placeholder="上海" value=""><span class="sd-select-view-value"><span style="width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" class="sd-ellipsis sd-ellipsis--single-line"><span class="sd-ellipsis-content">上海</span></span>
          <!----></span><span class="sd-select-view-suffix"><button type="button" class="sd-select-view-clear-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></button><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
          <!----></span></span>
          <!---->
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->简介
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="bio">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex">
          <div class="sd-json-form-control sd-textarea-wrapper">
            <!--v-if--><textarea class="sd-textarea" placeholder="请输入简介" value=""></textarea>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->启用高级配置
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="enableAdvanced">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><label class="sd-checkbox sd-json-form-control--inline"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">启用高级配置</span></label></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->备注
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="reminder">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex">
          <div class="sd-json-form-control sd-textarea-wrapper sd-textarea-disabled">
            <!--v-if--><textarea disabled="" class="sd-textarea" placeholder="勾选“启用高级配置”后可编辑" value=""></textarea>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</form>
<transition-stub data-v-d64c8b2e="" name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content"> 当前数据：{"name":"","city":"shanghai","bio":"","enableAdvanced":false,"contactType":"email","email":"","phone":"","wechat":"","reminder":""}</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;

exports[`<json-form> demo: > render [custom-component] correctly 1`] = `
<form data-v-47035f91="" class="sd-form sd-form-layout-horizontal sd-form-size-medium sd-form-auto-label-width sd-json-form sd-json-form--default">
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->触发模式
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="mode">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-select-view-single sd-select sd-json-form-control sd-select-view sd-select-view-size-medium sd-select-view-search"><!----><input class="sd-select-view-input sd-select-view-input-hidden" placeholder="脚本模式" value=""><span class="sd-select-view-value"><span style="width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" class="sd-ellipsis sd-ellipsis--single-line"><span class="sd-ellipsis-content">脚本模式</span></span>
          <!----></span><span class="sd-select-view-suffix"><button type="button" class="sd-select-view-clear-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></button><span class="sd-select-view-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down sd-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
          <!----></span></span>
          <!---->
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->启用高级配置
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="enableAdvanced">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex"><label class="sd-checkbox sd-json-form-control--inline"><input type="checkbox" class="sd-checkbox-target" value="false"><span class="sd-icon-hover sd-checkbox-icon-hover"><div class="sd-checkbox-icon"><!----></div></span><span class="sd-checkbox-label">启用高级配置</span></label></div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->脚本
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="script">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex">
          <div class="demo-script-field sd-json-form-control--inline">
            <div class="demo-script-field__hint">这里用 sd-textarea 模拟业务里的自定义字段组件。</div>
            <div class="sd-textarea-wrapper sd-textarea-disabled">
              <div class="sd-textarea-mirror">const start = true;
              </div><textarea disabled="" class="sd-textarea" placeholder="勾选“启用高级配置”后可编辑脚本" value="const start = true;"></textarea>
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="sd-row sd-row-nowrap sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-horizontal">
    <div class="sd-col sd-col-5 sd-form-item-label-col sd-form-item-label-col-flex"><label class="sd-form-item-label">
        <!--v-if-->高级备注
        <!--v-if-->
        <!--v-if-->
      </label></div>
    <div class="sd-col sd-form-item-wrapper-col" style="flex: 1 1 auto;" id="remark">
      <div class="sd-form-item-content-wrapper">
        <div class="sd-form-item-content sd-form-item-content-flex">
          <div class="sd-json-form-control sd-textarea-wrapper sd-textarea-disabled">
            <!--v-if--><textarea disabled="" class="sd-textarea" placeholder="未启用高级配置时不可编辑" value=""></textarea>
            <!--v-if-->
            <!--v-if-->
          </div>
        </div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</form>
<transition-stub data-v-47035f91="" name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-success">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content"> 当前数据：{"mode":"script","enableAdvanced":false,"script":"const start = true;","webhook":"","approver":"","remark":""}</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;
